ingress/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: k8s-jenkins.tae-tea.net
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
