ingress/k8s_https_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - k8s.tae-tea.net
    secretName: kubernetes-dashboard-certs
  rules:
    - host: k8s.tae-tea.net
      http:
        paths:
        - path: /
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 443
